Адапт до оформления

--- a/2.html
+++ b/2.html
@@ -176,7 +176,7 @@
 				
 				<td> 
 					<div class="_2_services_text_1" align="justify">Уход за слепым престарелым родственником непростая задача. Не всегда у родных есть возможность обеспечивать необходимую заботу невидящему дорогому человеку. Все чаще люди по всей стране принимают решение довериться профессионалам и совместным решением определяют слепого пожилого человека в комфортабельный дом престарелых.</div>
-					<div class="_2_services_text_1-1">
+					<div class="_2_services_text_1-1" align="justify">
 						Наш дом престарелых для слепых предоставляет комплексный уход за постояльцами. В условиях современной жизни слепому человеку, в силу специфики болезни, легко получить травму или попасть в ситуацию, ведущую к пагубным последствиям. Персонал нашего пансионата для слепых пожилых людей обеспечит круглосуточное наблюдение за передвижением и моральным состоянием постояльца. Это функцию исполняют сотрудники, которые имеют специальное медицинское образование. Они не позволят слепым престарелым людям чувствовать себя одиноко или подавлено. В условиях проживания в нашем интернате престарелых человек будет находиться в атмосфере заботы, поддержки и разнообразного досуга, что сделает насыщенной и счастливой его жизнь.
 					</div>
 				</td>
@@ -190,7 +190,7 @@
 	<div class="container">	
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
 		<div class="_2_services_img_phone">
-		<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/>	</div>
+		<img src="img/st_phone1.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/>	</div>
 		<table>	
 			<tr>
 				<td>
