--- a/3.html
+++ b/3.html
@@ -191,6 +191,9 @@
 <div class="_3_services_2">
 	<div class="container">	
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+		
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone2.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -202,15 +205,15 @@
 						<h4>ПСИХОНЕВРОЛОГИЧЕСКИЙ ПАНСИОНАТ</h4>
 					</div>
 					<div class="_3_services_logo_2_phone">
-						<h4>ЧТО ПРЕДЛАГАЕТ<br>ПСИХОНЕВРОЛОГИЧЕСКИЙ ПАНСИОНАТ</h4>	
+						<h4>ЧТО ПРЕДЛАГАЕТ<br>ПСИХОНЕВРОЛОГИЧЕСКИЙ<br>ПАНСИОНАТ</h4>	
 					</div>	
 				</td>
 				<td>
 					<div class="_3_services_logo_3">
 						<h4>ДЛЯ ПОЖИЛЫХ</h4>
 					</div>
-					<div class="_2_services_logo_3_phone">
-						<h4>ЗА<br>СЛАБОВИДЯЩИМИ<br>ПАЦИЕНТАМИ</h4>	
+					<div class="_3_services_logo_3_phone">
+						<h4>ДЛЯ ПОЖИЛЫХ</h4>	
 					</div>
 				</td>
 			</tr>
@@ -231,6 +234,7 @@
 					</td>
 					<td>
 						<div class="_3_services_text_3_3">
+						
 							<div class="_3_services_text_3" align="justify">Для каждого пациента созданы благоприятные условия:<br>
 								1. Постояльцы живут в уютных комнатах, обставленных по-домашнему.<br>
 								2. Ежедневно каждого жильца пансионата осматривает врач.<br>
@@ -253,6 +257,9 @@
 <div class="_3_services_4">
 	<div class="container">
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+		
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone3.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -263,10 +270,16 @@
 					<div class="_3_services_logo_4-1">
 						<h4>ПСИХОНЕВРОЛОГИЧЕСКИХ БОЛЬНЫХ</h4>
 					</div>
+					<div class="_3_services_logo_4_phone">
+						<h4>ОТКРЫТЫЙ ПАНСИОНАТ<br>ДЛЯ<br>ПСИХОНЕВРОЛОГИЧЕСКИХ</h4>	
+					</div>	
 				</td>
 				<td>
 					<div class="_3_services_logo_5">
 						<h4></h4>
+					</div>
+					<div class="_3_services_logo_5_phone">
+						<h4>БОЛЬНЫХ</h4>	
 					</div>
 				</td>
 			</tr>
@@ -277,33 +290,41 @@
 <div class="_3_services_5">
 	<div class="container">		
 		<div class="_3_services_text_5-1">
-			<p>«Филипыч» — не психиатрическая больница в классическом смысле слова. Здесь нет могучих санитаров, которые бесцеремонно обращаются с беспомощными больными. Каждый жилец частного дома для психически больных «Филипыч» свободен. Его права защищены. Персонал обращается заботливо и уважительно.</p>
+			«Филипыч» — не психиатрическая больница в классическом смысле слова. Здесь нет могучих санитаров, которые бесцеремонно обращаются с беспомощными больными. Каждый жилец частного дома для психически больных «Филипыч» свободен. Его права защищены. Персонал обращается заботливо и уважительно.
 		</div>
+		<p></p>
 		<div class="_3_services_text_5-2">
-			<p>Родственники могут в любой момент приехать к своим больным дедушкам-бабушкам и лично убедиться, что с ними обращаются достойно, обеспечивают всем необходимым, окружают заботой. Расположен пансионат для психических в Одинцовском районе, деревне Марьино.</p>
+			Родственники могут в любой момент приехать к своим больным дедушкам-бабушкам и лично убедиться, что с ними обращаются достойно, обеспечивают всем необходимым, окружают заботой. Расположен пансионат для психических в Одинцовском районе, деревне Марьино.
 		</div>
+		<p></p>
 		<div class="_3_services_text_5-3">
-			<p>Здесь красивые места: густая зелень, поля, речка. Жильцы пансионата могут наслаждаться природой, когда захочется. Прогулки совершаются в сопровождении сиделок, что необходимо для безопасности самих больных. Многие пенсионеры с деменцией плохо ориентируются в пространстве, могут заблудиться и пострадать без присмотра.</p>
+			Здесь красивые места: густая зелень, поля, речка. Жильцы пансионата могут наслаждаться природой, когда захочется. Прогулки совершаются в сопровождении сиделок, что необходимо для безопасности самих больных. Многие пенсионеры с деменцией плохо ориентируются в пространстве, могут заблудиться и пострадать без присмотра.
 		</div>
 		<div class="_2_services_desktop">
 		<img class="_3_services_img_5" src="img/photo_services/6.png" alt="HTML5" style="vertical-align: middle;"/>
 		</div>
+		
 	</div>
 </div>
-
+<img class="_3_services_img_5_phone" src="img/photo_services/6_phone.png" alt="HTML5" style="vertical-align: middle;"/>
 <!--------------------------------------- Блок 6 - оглавление ------------------------------------------->
 <div class="_3_services_6">
 	<div class="container">
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone2.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
 					<div class="_3_services_logo_6">
 						<h4>ЗАБОТА О КАЖДОМ</h4>
 					</div>
+					<div class="_3_services_logo_6_phone">
+						<h4>ЗАБОТА О КАЖДОМ</h4>	
+					</div>	
 				</td>
 				<td>
-					<div class="_3_services_logo_6-1">
+					<div class="_3_services_logo_7">
 						<h4></h4>
 					</div>
 				</td>
@@ -315,7 +336,7 @@
 <div class="_3_services_7">
 	<div class="container">		
 		<div class="_3_services_text_7-1">
-			<p>Частный психоневрологический пансионат для душевнобольных — действительно по-домашнему уютное место. В нем созданы условия для достойного проживания людей с различными потребностями</p>
+			Частный психоневрологический пансионат для душевнобольных — действительно по-домашнему уютное место. В нем созданы условия для достойного проживания людей с различными потребностями
 		</div>
 		<table>	
 				<tr>
@@ -343,7 +364,7 @@
 				</tr>			
 			</table>
 		<div class="_3_services_text_7-2">
-			<p>Частный психоневрологический пансионат для престарелых в Марьино может похвастаться особой душевной атмосферой. Персонал и постояльцы здесь — друзья. В такой обстановке и восстановление пациентов проходит продуктивнее. Больные чувствуют себя спокойнее. Меньше поводов для стресса.</p>
+			Частный психоневрологический пансионат для престарелых в Марьино может похвастаться особой душевной атмосферой. Персонал и постояльцы здесь — друзья. В такой обстановке и восстановление пациентов проходит продуктивнее. Больные чувствуют себя спокойнее. Меньше поводов для стресса.
 		</div>
 	</div>
 </div>
@@ -353,6 +374,8 @@
 <div class="_3_services_8">
 	<div class="container">
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone3.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -363,11 +386,17 @@
 					<div class="_3_services_logo_8-1">
 						<h4>ДЛЯ ПСИХИЧЕСКИ БОЛЬНЫХ</h4>
 					</div>
+					<div class="_3_services_logo_8_phone">
+						<h4>«ФИЛИПЫЧ» — ПЛАТНЫЙ<br>ПАНСИОНАТ ДЛЯ<br>ПСИХИЧЕСКИХ</h4>	
+					</div>	
 				</td>
 				<td>
 					<div class="_3_services_logo_9">
 						<h4></h4>
 					</div>
+					<div class="_3_services_logo_9_phone">
+						<h4>БОЛЬНЫХ</h4>	
+					</div>	
 				</td>
 			</tr>
 		</table>
@@ -380,6 +409,12 @@
 			<tr>
 				<td>
 					<div class="_3_services_text_9">
+						Проживание и медицинское обслуживание в пансионате «Филипыч» базируется на платной основе. Клиентам доступны 3 пакета услуг:<br>
+							1. «Эконом»: включает проживание, 3-разовое питание, присмотр сиделки, еженедельный медицинский осмотр;<br>
+							2. «Норм»: проживание, 5-разовое питание (при необходимости — диетическое), ежедневный осмотр врача, услуги сиделки;<br>
+							3. «Норм плюс»: проживание, 5-разовое диетическое питание, услуги индивидуальной сиделки, ежедневный медосмотр, особые условия для лежачих больных.
+					</div>
+					<div class="_3_services_text_9_phone">
 						Проживание и медицинское обслуживание в пансионате «Филипыч» базируется на платной основе. Клиентам доступны 3 пакета услуг:<br>
 							1. «Эконом»: включает проживание, 3-разовое питание, присмотр сиделки, еженедельный медицинский осмотр;<br>
 							2. «Норм»: проживание, 5-разовое питание (при необходимости — диетическое), ежедневный осмотр врача, услуги сиделки;<br>
@@ -408,11 +443,20 @@
 	</div>
 </div>
 
+<div class="_3_services_10_phone">
+		<h4>---------------------------------------------------------------------------</h4>
+		<div class="_3_services_text_10_phone">
+			Дом престарелых с психическими отклонениями «Филипыч» — заведение с самыми умеренными ценами. В этом легко убедиться. Для сравнения клиенты всегда могут позвонить в другие частные пансионаты для психически больных в Подмосковье и узнать, сколько стоят аналогичные услуги в них.
+		</div>	
+		<h4>---------------------------------------------------------------------------</h4>
+</div>
 
 <!--------------------------------------- Блок 11 ------------------------------------------->
 <div class="_3_services_11">
 	<div class="container">
 		<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone2.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -423,11 +467,17 @@
 					<div class="_3_services_logo_11-1">
 						<h4>ПСИХОНЕВРОЛОГИЧЕСКИЙ ПАНСИОНАТ</h4>
 					</div>
+					<div class="_3_services_logo_11_phone">
+						<h4>ЧТО ПРЕДЛАГАЕТ<br>ПСИХОНЕВРОЛОГИЧЕСКИЙ<br>ПАНСИОНАТ</h4>	
+					</div>	
 				</td>
 				<td>
 					<div class="_3_services_logo_12">
 						<h4>ДЛЯ ПОЖИЛЫХ</h4>
 					</div>
+					<div class="_3_services_logo_12_phone">
+						<h4>ДЛЯ ПОЖИЛЫХ</h4>	
+					</div>	
 				</td>
 			</tr>
 		</table>
@@ -435,11 +485,12 @@
 </div>
 
 <!--------------------------------------- Блок 12 ------------------------------------------->
-<div class="_3_services_12">
+<div class="_3_services_12" align="justify">
 	<div class="container">
-		<div class="_3_services_text_7-2">
-			<p>Переезд из своей квартиры в незнакомое место — всегда стресс для больного человека. Минимизировать его поможет пробная ознакомительная поездка в пансионат. Вы можете приехать со своим престарелым родственником в Марьино и провести в «Филипыче» час-другой.</p>
-			<p>Это время можно посвятить знакомству с местными жителями, общению с персоналом, осмотру условий проживания. Ознакомительная поездка поможет больному пенсионеру понять, что здесь хорошо. Мысль о переезде не будет уже казаться такой пугающей.</p>
+		<div class="_3_services_text_7-2" >
+			Переезд из своей квартиры в незнакомое место — всегда стресс для больного человека. Минимизировать его поможет пробная ознакомительная поездка в пансионат. Вы можете приехать со своим престарелым родственником в Марьино и провести в «Филипыче» час-другой.
+			<p></p>
+			Это время можно посвятить знакомству с местными жителями, общению с персоналом, осмотру условий проживания. Ознакомительная поездка поможет больному пенсионеру понять, что здесь хорошо. Мысль о переезде не будет уже казаться такой пугающей.
 		</div>
 		
 		<table>	
@@ -464,7 +515,8 @@
 			</tr>			
 		</table>
 		<div class="_3_services_text_7-3">
-			<p>Теперь можно переезжать в пансионат для психически больных в Подмосковье. Здесь престарелого больного встретят и помогут устроиться доброжелательные медсестры, няни. Они позаботятся о том, чтобы знакомство с новым местом жительства прошло без стресса и пациент сразу почувствовал себя здесь как дома.</p>
+			<p></p>
+			Теперь можно переезжать в пансионат для психически больных в Подмосковье. Здесь престарелого больного встретят и помогут устроиться доброжелательные медсестры, няни. Они позаботятся о том, чтобы знакомство с новым местом жительства прошло без стресса и пациент сразу почувствовал себя здесь как дома.
 		</div>
 	</div>
 </div>
