--- a/4.html
+++ b/4.html
@@ -152,28 +152,48 @@
 		<!-- <img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
 	</div>
 </div>
-
+<div class = "message_phone">
+	<div class="container">
+		<div class="message_text3">Сестринский уход за<br>пожилыми людьми</div>
+		
+		<div class="message_text_media">Сестринский уход за<br>пожилыми людьми
+		<img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div>
+		
+		<div class="message_img_phone">
+		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
+		<div class="message_text_phone">Сестринский уход за<br>пожилыми людьми</div>
+	</div>
+</div>
 <!-------------------------------1 блок----------------------------->
 
 <div class="_4_services_1">
 	<div class="container">
 		<div class="_4_services_text_1_0">
-			<p>Больницы не всегда могут предоставить качественный сестринский уход. Кроме того, время нахождения пожилого человека в стационаре строго ограничено и его часто не достаточно для полного восстановления. В этой ситуации необходимо обеспечить близкого родственника надлежащим лечением и заботой. Пансионат «Филипыч» предлагает комплексную медицинскую помощь с учетом истории болезни каждого больного.</p>
+			Больницы не всегда могут предоставить качественный сестринский уход. Кроме того, время нахождения пожилого человека в стационаре строго ограничено и его часто не достаточно для полного восстановления. В этой ситуации необходимо обеспечить близкого родственника надлежащим лечением и заботой. Пансионат «Филипыч» предлагает комплексную медицинскую помощь с учетом истории болезни каждого больного.
 		</div>
 			<img class="_4_services_img_1" src="img/photo_services/10.png" alt="HTML5" style="vertical-align: middle;"/>
+			<img class="_4_services_img_1_phone" src="img/photo_services/10_phone.png" alt="HTML5" style="vertical-align: middle;"/>
 	</div>
 </div>	
 
 <!-------------------------------2 блок - оглавление ----------------------------->
 <div class="_4_services_2">
 	<div class="container">	
+		<div class="_2_services_desktop">
 		<img src="img/st.png" alt="HTML5" style="vertical-align: middle;"/>	
+		</div>
+		
+		<div class="_2_services_img_phone">
+		<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
 					<div class="_4_services_logo_2">
 						<h4>ЦЕНЫ</h4>
 					</div>
+				<div class="_3_services_logo_6_phone">
+						<h4>ЦЕНЫ</h4>	
+					</div>	
 				</td>
 				<td>
 					<div class="_4_services_logo_3">
@@ -184,7 +204,6 @@
 		</table>
 	</div>
 </div>
-
 <!-------------------------------3 блок----------------------------->
 <div class="_4_prices">
 	<div class="container">
@@ -339,8 +358,9 @@
 <div class="_4_services_4">
 	<div class="container">		
 		<div class="_4_services_text_4-1">
-			<p>Услуги пансионата рассчитаны на граждан из Москвы и близлежащих областей.</p>
-			<p>Наш пансионат готов подобрать Вам надежного помощника, который готов оказать качественную медицинскую помощь и избавить от одиночества. Дом престарелых с медицинским уходом станет для Вас вторым домом.</p>
+			Услуги пансионата рассчитаны на граждан из Москвы и близлежащих областей.
+			<p></p>
+			Наш пансионат готов подобрать Вам надежного помощника, который готов оказать качественную медицинскую помощь и избавить от одиночества. Дом престарелых с медицинским уходом станет для Вас вторым домом.
 		</div>
 	</div>
 </div>
@@ -361,7 +381,7 @@
 			<li>проведение инъекций.</li>
 		</ul>
 		</div>	
-		<div class="medical_care_text_4">Данный список является ознакомительным. По факту же все индивидуально исходя из нужд и лечения каждого больного.</div>
+		<div class="medical_care_text_4" align="justify">Данный список является ознакомительным. По факту же все индивидуально исходя из нужд и лечения каждого больного.</div>
 	</div>
 </div>
 <!--------------------------------------- Блок 6 ------------------------------------------->
@@ -369,83 +389,19 @@
 	<div class="oformlenie_black_">
 		<h4>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
 		<div class="_4_services_text_6">
-			<h4>Дом престарелых с психическими отклонениями «Филипыч» — заведение с самыми умеренными ценами. В этом легко убедиться. Для сравнения клиенты всегда могут позвонить в другие частные пансионаты для психически больных в Подмосковье и узнать, сколько стоят аналогичные услуги в них.</h4>
+			<h4>Кроме того, за здоровьем пациента следит команда квалифицированных врачей, сиделок и медсестер, которые готовы разработать персональную реабилитационную программу для каждого постояльца.</h4>
 		</div>	
 		<h4>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
 	</div>
 </div>
 
-
-
-
-<!---- Доп кнопки ----->
-<!---- Кн поднятия ---->
-<div id="button_up"><img src="img/up.png"/></div>
-<script type="text/javascript">
-$(function() {
-$(window).scroll(function() {
-if($(this).scrollTop() != 0) {
-$('#button_up').fadeIn();
-} else {
-$('#button_up').fadeOut();
-}
-});
-$('#button_up').click(function() {
-$('body,html').animate({scrollTop:0},800);
-});
-});
-</script>
-<!---- Скролл меню ---->
-<script> 
-  var h_hght = 110; // высота шапки
-  var h_mrg = 0;    // отступ когда шапка уже не видна
-  $(function(){
-   $(window).scroll(function(){
-      var top = $(this).scrollTop();
-      var elem = $('#scroll');
-      if (top+h_mrg < h_hght) {
-       elem.css('top', (h_hght-top));
-      } else {
-       elem.css('top', h_mrg);
-      }
-    });
-  });
-</script>
-<script type="text/javascript">
-var h_hght = 110; // высота шапки
-  var h_mrg = 0;    // отступ когда шапка уже не видна
-     $(function(){
-     $(window).scroll(function() {
-      var top = $(this).scrollTop();
-       if (top < 110) $('.menu-main').css("box-shadow", "none");
-       else $(".menu-main").css("box-shadow", "0 0 3px rgba(0,0,0,0.5)");
-     });
-    });
-</script>
-<!---- Скролл полоски  ---->
-<script type="text/javascript">
-var h_hght1 = 0; // высота шапки
-  var h_mrg1 = 0;    // отступ когда шапка уже не видна
-     $(function(){
-     $(window).scroll(function() {
-      var top = $(this).scrollTop();
-       if (top < 110) $('.progress-container').css("background-color", "#fff");
-       else $(".progress-container").css("background-color", "#ebe2e8");
-     });
-    });
-</script>
-<!---- Скролл видимости полоски  ---->
-<script>
-var h_hght1 = 0; // высота шапки
-  var h_mrg1 = 0;    // отступ когда шапка уже не видна
-     $(function(){
-     $(window).scroll(function() {
-      var top = $(this).scrollTop();
-       if (top > 110) $('.progress-container').css("opacity", "1");
-       else $(".progress-container").css("opacity", "1");
-     });
-    });
-</script>
+<div class="_4_services_6_phone">
+		<h4>---------------------------------------------------------------------------</h4>
+		<div class="_4_services_text_6_phone">
+			Кроме того, за здоровьем пациента следит команда квалифицированных врачей, сиделок и медсестер, которые готовы разработать персональную реабилитационную программу для каждого постояльца.
+		</div>	
+		<h4>---------------------------------------------------------------------------</h4>
+</div>
 
 
 <!---- Подвал ---->
@@ -661,5 +617,73 @@ var h_hght1 = 0; // высота шапки
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
 </div>
 
+<!---- Доп кнопки ----->
+<!---- Кн поднятия ---->
+<div id="button_up"><img src="img/up.png"/></div>
+<script type="text/javascript">
+$(function() {
+$(window).scroll(function() {
+if($(this).scrollTop() != 0) {
+$('#button_up').fadeIn();
+} else {
+$('#button_up').fadeOut();
+}
+});
+$('#button_up').click(function() {
+$('body,html').animate({scrollTop:0},800);
+});
+});
+</script>
+<!---- Скролл меню ---->
+<script> 
+  var h_hght = 110; // высота шапки
+  var h_mrg = 0;    // отступ когда шапка уже не видна
+  $(function(){
+   $(window).scroll(function(){
+      var top = $(this).scrollTop();
+      var elem = $('#scroll');
+      if (top+h_mrg < h_hght) {
+       elem.css('top', (h_hght-top));
+      } else {
+       elem.css('top', h_mrg);
+      }
+    });
+  });
+</script>
+<script type="text/javascript">
+var h_hght = 110; // высота шапки
+  var h_mrg = 0;    // отступ когда шапка уже не видна
+     $(function(){
+     $(window).scroll(function() {
+      var top = $(this).scrollTop();
+       if (top < 110) $('.menu-main').css("box-shadow", "none");
+       else $(".menu-main").css("box-shadow", "0 0 3px rgba(0,0,0,0.5)");
+     });
+    });
+</script>
+<!---- Скролл полоски  ---->
+<script type="text/javascript">
+var h_hght1 = 0; // высота шапки
+  var h_mrg1 = 0;    // отступ когда шапка уже не видна
+     $(function(){
+     $(window).scroll(function() {
+      var top = $(this).scrollTop();
+       if (top < 110) $('.progress-container').css("background-color", "#fff");
+       else $(".progress-container").css("background-color", "#ebe2e8");
+     });
+    });
+</script>
+<!---- Скролл видимости полоски  ---->
+<script>
+var h_hght1 = 0; // высота шапки
+  var h_mrg1 = 0;    // отступ когда шапка уже не видна
+     $(function(){
+     $(window).scroll(function() {
+      var top = $(this).scrollTop();
+       if (top > 110) $('.progress-container').css("opacity", "1");
+       else $(".progress-container").css("opacity", "1");
+     });
+    });
+</script>
 </body>
 </html> 
