--- a/oformlenie.html
+++ b/oformlenie.html
@@ -34,11 +34,11 @@
 	</div>
 </div>
 
-	<!-- Шапка -->
+<!-------------- Шапка ------------------->
 <header class="header_">
 		<div class="container">
 			<div class="header_inner">
-				<a href="index.html"><img class="header_item" src="img/logo/logo.png" alt="HTML5"></a>
+				<a href="index.html"><img class="header_item_logo" src="img/logo/logo.png" alt="HTML5"></a>
 				<div class="header_item">
 					<p class="header_text header_text1" >
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -59,6 +59,7 @@
 					</p>
 				</div>					
 			</div>
+			
 			<div class = "strip_header"></div>				
 					<div class="header_text4">
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -145,6 +146,7 @@
 	</ul>
 </div>
 
+
 <div class = "message">
 	<div class="container">
 		<div class="message_text">Оформление</div>
@@ -152,29 +154,54 @@
 	</div>
 </div>
 
+<div class = "message_phone">
+	<div class="container">
+		<div class="message1_img_phone">
+		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
+		<div class="message1_text_phone">Оформление</div>
+	</div>
+</div>
 
-
+<!-------------------------------1 блок----------------------------->
 <div class="oformlenie">
 	<div class="container">
 		<div class="oformlenie_text" align="justify">Многие люди, принявшие решение разместить своего близкого человека в платном доме престарелых, задаются одним и тем же вопросом: «Как и что для этого нужно?». Первым шагом будет правильная регистрация в заведение. О правилах регистрации в частный дом престарелых «Филипыч» Вас проконсультируют наш персонал по телефону. Процедура оформления не займет много времени, а Ваш близкий родственник обретет второй дом, наполненный вниманием и уютом.</div>
-		<div class="oformlenie_0">
-			<img src="img/st.png" alt="HTML5" style="vertical-align: middle;"/>	
+	</div>
+</div>
+<!-------------------------------2 блок - оглавление ----------------------------->
+<div class="_2_oformlenie">
+	<div class="container">		
+			<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+			
+			<div class="_2_services_img_phone">
+			<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
+		
 		<table>	
 			<tr>
 				<td>
 					<div class="oformlenie_logo_1">
 						<h4>СТОИМОСТЬ УСЛУГИ ОФОРМЛЕНИЯ</h4>
 					</div>
+					<div class="oformlenie_logo_1_phone">
+						<h4>СТОИМОСТЬ<br>УСЛУГИ ОФОРМЛЕНИЯ</h4>	
+					</div>
 				</td>
 				<td>
 					<div class="oformlenie_logo_2">
 						<h4>В ДОМ ПРЕСТАРЕЛЫХ</h4>
 					</div>
+					<div class="oformlenie_logo_2_phone">
+						<h4>В ДОМ<br>ПРЕСТАРЕЛЫХ</h4>	
+					</div>	
 				</td>
 			</tr>
 		</table>
-		</div>
-		
+	</div>
+</div>
+
+<!-------------------------------3 блок----------------------------->
+<div class="_3_oformlenie">
+	<div class="container">		
 		<div class="oformlenie_0_0">
 			<table>	
 				<tr>
@@ -196,12 +223,22 @@
 		</div>
 	</div>
 </div>
+<div class="_3_oformlenie_phone">
+	<div class="container">		
+		Многие пенсионеры самостоятельно принимают решение проживать в пансионате для пожилых, осознавая необходимость в круглосуточном уходе и качественном лечении. Интернат содержит необходимое оборудование для содержания пациентов с различными недугами, чего не хватает в домах и квартирах наших постояльцев. Большинство людей, осознавая все преимущества пансионата, отказываются в наших услугах, ошибочно страшась огромной стоимости за проживание. Однако мы готовы предложить Вам комплексный уход за престарелым человеком по самым низким и доступным ценам.</div>
+		<p></p>
+		Цена за такую услугу является доступной, а благосостояние пожилого человека улучшается в компании сверстников и соответствующих интересов.</div>
+	</div>
+</div>
+<!-------------------------------4 блок - оглавление ----------------------------->
 
-<!--------------------------------------- Блок Документы (2) ------------------------------------------->
-<div class="oformlenie_documents">
+<div class="_4_oformlenie">
 	<div class="container">
 		<div class="oformlenie_1">
-			<img src="img/st.png" alt="HTML5" style="vertical-align: middle;"/>	
+			<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+			
+			<div class="_2_services_img_phone">
+			<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -211,42 +248,64 @@
 					<div class="oformlenie_logo_3-1">
 						<h4>ПРИ ОФОРМЛЕНИИ</h4>
 					</div>
+					<div class="oformlenie_logo_3_phone">
+						<h4>ДОКУМЕНТЫ<br>НЕОБХОДИМЫЕ ПРИ<br>ОФОРМЛЕНИИ</h4>	
+					</div>
 				</td>
 				<td>
 					<div class="oformlenie_logo_4">
 						<h4>В ДОМ ПРЕСТАРЕЛЫХ</h4>
 					</div>
+					<div class="oformlenie_logo_4_phone">
+						<h4>В ДОМ<br>ПРЕСТАРЕЛЫХ</h4>	
+					</div>	
 				</td>
 			</tr>
 		</table>
 		</div>
-		
-		<div class="oformlenie_1_0">
-			<table>	
-				<tr>
-					<td>
-						<img class="oformlenie_img_1" src="img/photo_oformlenie/2.png" alt="HTML5" style="vertical-align: middle;"/>
-					</td>
+	</div>
+</div>	
+<!----------------5 Блок Документы (2) ------------------------------------------->		
+<div class="_5_oformlenie">
+	<div class="container">
+		<table>	
+			<tr>
+				<td>
+					<img class="oformlenie_img_1" src="img/photo_oformlenie/2.png" alt="HTML5" style="vertical-align: middle;"/>
+				</td>
 					
-					<td> 
-						<div class="oformlenie_text_3" align="justify">Для того чтобы человек преклонных лет стал постояльцем нашего интерната, необходимо собрать пакет документов:</div>
-						<div class="oformlenie_text_3-1">
+				<td> 
+					<div class="oformlenie_text_3" align="justify">Для того чтобы человек преклонных лет стал постояльцем нашего интерната, необходимо собрать пакет документов:</div>
+					<div class="oformlenie_text_3-1">
 						1. Паспортные данные будущего члена пансионата и официального опекуна, оплачивающего пребывание в медицинском центре;<br>
 						2. Справку, отрицающую наличие различных заражений;<br>
 						3. Флюорографию;<br>
 						4. Справку о наличие или отсутствие инфекционных заболеваний;<br>
 						5. Документ об итогах сдачи анализа крови;<br>
 						6. Медицинскую карточку пожилого пенсионера;
-						</div>
-					</td>
-				</tr>
-			</table>
-		</div>
+					</div>
+				</td>
+			</tr>
+		</table>
 	</div>
 </div>
 
-<!--------------------------------------- Блок Черная вставка ------------------------------------------->
-<div class="oformlenie_black">
+<div class="_5_oformlenie_phone">
+	<div class="container">
+		<div class="oformlenie_text_3" align="justify">Для того чтобы человек преклонных лет стал постояльцем нашего интерната, необходимо собрать пакет документов:</div>
+		
+		<div class="oformlenie_text_3-1">
+			1. Паспортные данные будущего члена пансионата и официального опекуна, оплачивающего пребывание в медицинском центре;<br>
+			2. Справку, отрицающую наличие различных заражений;<br>
+			3. Флюорографию;<br>
+			4. Справку о наличие или отсутствие инфекционных заболеваний;<br>
+			5. Документ об итогах сдачи анализа крови;<br>
+			6. Медицинскую карточку пожилого пенсионера;
+		</div>
+	</div>
+</div>
+<!---------------------------------------6 Блок Черная вставка ------------------------------------------->
+<div class="_6_oformlenie">
 		<div class="oformlenie_black_">
 			<h4>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
 			<h4>Обратите внимание – к общему пакету документов, необходимых для оформления старика в дом<br>престарелых, прикрепляется оригинал полиса ОМС.</h4>
@@ -254,11 +313,22 @@
 		</div>
 </div>
 
-<!--------------------------------------- Блок ПОРЯДОК ОФОРМЛЕНИЯ ПОСТОЯЛЬЦА ------------------------------------------->
-<div class="oformlenie_order">
+<div class="_6_oformlenie_phone">
+		<h4>---------------------------------------------------------------------------</h4>
+		<div class="oformlenie_black_phone">
+			Обратите внимание – к общему пакету документов, необходимых для оформления старика в дом
+			престарелых, прикрепляется оригинал полиса ОМС.
+		</div>	
+		<h4>---------------------------------------------------------------------------</h4>
+</div>
+<!---------------------------------------7 Блок ПОРЯДОК ОФОРМЛЕНИЯ ПОСТОЯЛЬЦА -----оглавление-------------------------------------->
+<div class="_7_oformlenie">
 	<div class="container">
 		<div class="oformlenie_2">
-			<img src="img/st.png" alt="HTML5" style="vertical-align: middle;"/>	
+			<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+			
+			<div class="_2_services_img_phone">
+			<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -268,16 +338,26 @@
 					<div class="oformlenie_logo_5-1">
 						<h4>ПОСТОЯЛЬЦА</h4>
 					</div>
+					<div class="oformlenie_logo_5_phone">
+						<h4>ПОРЯДОК<br>ОФОРМЛЕНИЯ</h4>	
+					</div>
 				</td>
 				<td>
 					<div class="oformlenie_logo_6">
 						<h4></h4>
 					</div>
+					<div class="oformlenie_logo_6_phone">
+						<h4>ПОСТОЯЛЬЦА</h4>	
+					</div>
 				</td>
 			</tr>
 		</table>
 		</div>
-
+	</div>
+</div>
+<!---------------------------------------8 Блок -------------------------------------->	
+<div class="_8_oformlenie">
+	<div class="container">
 		<div class="oformlenie_text_4" align="justify">Чтобы стать постояльцем нашего пансионата необходимо пройти всего 4 ступени обязательных условий:<br>
 		1. Позвонить в администрацию нашего пансионата и уточнить о правилах размещения в пансионат;<br>
 		2. Собрать документы, необходимые при заселении;<br>
@@ -288,11 +368,14 @@
 	</div>
 </div>
 
-<!--------------------------------------- Блок КАКИЕ ЛИЧНЫЕ ВЕЩИ ДОЛЖЕН ИМЕТЬ ПРИ СЕБЕ ------------------------------------------->
-<div class="oformlenie_infa">
+<!---------------------------------------9 Блок КАКИЕ ЛИЧНЫЕ ВЕЩИ ДОЛЖЕН ИМЕТЬ ПРИ СЕБЕ ----оглавление--------------------------------------->
+<div class="_9_oformlenie">
 	<div class="container">
 		<div class="oformlenie_3">
-			<img src="img/st.png" alt="HTML5" style="vertical-align: middle;"/>	
+			<img src="img/st.png" class="_2_services_desktop" alt="HTML5" style="vertical-align: middle;"/>	
+			
+			<div class="_2_services_img_phone">
+			<img src="img/st_phone.png" class="_2_services_img_phone" alt="HTML5" style="vertical-align: middle;"/></div>
 		<table>	
 			<tr>
 				<td>
@@ -302,16 +385,26 @@
 					<div class="oformlenie_logo_7-1">
 						<h4>ДОЛЖЕН ИМЕТЬ ПРИ СЕБЕ</h4>
 					</div>
+					<div class="oformlenie_logo_7_phone">
+						<h4>КАКИЕ ЛИЧНЫЕ<br>ВЕЩИ ДОЛЖЕН<br>ИМЕТЬ ПРИ СЕБЕ</h4>	
+					</div>
 				</td>
 				<td>
 					<div class="oformlenie_logo_8">
 						<h4>НОВОИСПЕЧЕННЫЙ ПОСТОЯЛЕЦ?</h4>
 					</div>
+					<div class="oformlenie_logo_8_phone">
+						<h4>НОВОИСПЕЧЕННЫЙ<br>ПОСТОЯЛЕЦ?</h4>	
+					</div>
 				</td>
 			</tr>
 		</table>
 		</div>
-
+	</div>
+</div>	
+<!---------------------------------------10 Блок ------------------------------------------>
+<div class="_10_oformlenie">
+	<div class="container">
 		<div class="oformlenie_text_5" align="justify">Первоочередно, пожилой постоялец должен иметь при себе необходимую одежду и гигиенические средства. Для инвалида, уход за которым будет осуществляться в хосписе, необходима одежда для сна и сменная обувь. Вам не стоит переживать, как определить человека в дом престарелых «Филипыч», так как наши услуги действуют как для жителей Москвы, так и соседних областей. Платный дом престарелых «Филипыч» – здоровье и круглосуточный уход за Вашими самыми дорогими и близкими!
 		</div>
 	</div>
@@ -398,7 +491,7 @@ var h_hght1 = 0; // высота шапки
 
 <!---- Подвал ---->
 <div class = "footer_oformlenie">
-<div class="container">		
+	<div class="container">		
 		<table width="100%" height="300px">
 			<tr>
 				<th rowspan="3" width="300px" height="297px">
@@ -503,6 +596,104 @@ var h_hght1 = 0; // высота шапки
 					</div>
 				</td>
 			</tr>
+		</table>
+	</div>
+</div>
+
+<div class = "footer_oformlenie_phone">
+	<div class="container">	
+		<table>
+			<tr>
+				<div class = "img_ma_phone">
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="></a>
+					<img src="img/footer/ma.png" width="65x" height="76px" alt="HTML5"/></div>
+			</tr>	
+		</table>
+		
+		<table>
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone1">Контакты</div>
+				</td>
+			</tr>
+		</table>
+		<table>	
+			<tr>
+				<td>
+					<div class = "img_strip_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		
+		<table class="contacts_footer_phone">
+			<tr>		
+				<td>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/gps.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+								<div class="_phone">
+								<span style="vertical-align: middle;">Московская область,<br>Одинцовский район, дер.<br>Марьино, ул. Южная, д.</span></div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/phone.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone1">
+								<span style="vertical-align: middle;">Моб: +7 (915) 212-28-19</span></div>
+									</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/1message.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone">
+								<span style="vertical-align: middle;">dom-prestarelyh@bk.ru</span></div>
+								</div>
+							</td>
+						</tr>	
+				</td>
+			</tr>
+		</table>
+		
+		<table>		
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone2">Мы в соц сетях</div></div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div class = "img_strip1_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<td>
+					<div class = "social_footer_phone">
+						<div class="img_icon_footer_phone">
+						<a href="https://www.facebook.com/grandpa.filipych">
+							<img src="img/footer/f_icon.png" width="35x" height="35px"/></a>
+						<a href="https://vk.com/club155151679">
+							<img src="img/footer/vk_icon.png" width="35x" height="35px"/></a>
+						<a href="https://ok.ru/filipych">
+							<img src="img/footer/o_icon.png" width="35x" height="35px"/></a>
+						</div>
+					</div>
+				</td>
+			</tr>	
 		</table>
 	</div>
 </div>
