--- a/4.html
+++ b/4.html
@@ -74,22 +74,22 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a class= "top_" href="index.html">Главная</a></li>
-				<li><a class= "top_" href="photo.html">Фото</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
-							<a class= "top_0" href="1.html">Медицинский уход</a>
-							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "top_0" href="3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 					</div>
 				</li>
-				<li><a class= "top_" href="prices.html">Цены</a></li>
-				<li><a class= "top_" href="oformlenie.html">Оформление</a></li>
-				<li><a class= "top_" href="contacts.html">Контакты</a></li>
-				<li><a class= "top_" href="request.html">Отправить заявку</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>
 			</ul>
 		</nav>
 	</div>	
@@ -110,25 +110,25 @@
 	
 	<img src="img/hamburger-menu/close_menu.png" class="menu__box_img_close" onclick="myFunction()" alt="HTML5" style="vertical-align: middle;"/>
 		
-		<li><a class="menu__item" href="index.html">Главная</a></li>
-		<li><a class= "menu__item" href="photo.html">Фото</a></li>
+		<li><a class="menu__item" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
+		<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
 			<li>
 				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
 				<div class="podmenu">
 					<div class="sub-menu1_mediaMyPhone"></div>
 						<div class="sub-menu_mediaMyPhone">
-							<a class= "top_0" href="1.html">Медицинский уход</a>
-							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "top_0" href="3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 				</div>
 				</a>
 			</li>
-			<li><a class= "menu__item" href="prices.html">Цены</a></li>
-			<li><a class= "menu__item" href="oformlenie.html">Оформление</a></li>
-			<li><a class= "menu__item" href="contacts.html">Контакты</a></li>
-			<li><a class= "menu__item" href="request.html">Отправить заявку</a></li>		
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>		
    <table>
 		<tr>
 			<td>
@@ -149,7 +149,7 @@
 <div class = "message_1">
 	<div class="container">
 		<div class="message_text_1">Сестринский уход за<br>пожилыми людьми</div>
-		<!-- <img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
+		<!-- <img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
 	</div>
 </div>
 <div class = "message_phone">
@@ -157,10 +157,10 @@
 		<div class="message_text3">Сестринский уход за<br>пожилыми людьми</div>
 		
 		<div class="message_text_media">Сестринский уход за<br>пожилыми людьми
-		<img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div>
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div>
 		
 		<div class="message_img_phone">
-		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
+		<img  src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" /></div> 
 		<div class="message_text_phone">Сестринский уход за<br>пожилыми людьми</div>
 	</div>
 </div>
